subsurfaces not updated on commit
In an example where I have multiple subsurfaces as decoration for a toplevel surface, some subsurfaces are not updated as they should.
In the libdecoration demo the top right min/max/close buttons are supposed to change colour when the mouse hovers over them. This works as expected in mutter, sway and mir, but does not work on Weston.
Expected behaviour (mutter 3.36.6):
Behaviour on weston 8.0.0: